Fix a bug to catch an exception when the user is blank in /github?